# assimp2bams

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/libs/: libassimp.cmake
resources/: assimp2bams-no-animations.bat  assimp2bams-only-animations.bat
src/: AssimpExporter.h  main.cpp
